# kgithub-notify

./: .gitignore  .gitleaksignore  AGENTS.md  CMakeLists.txt  README.md  TestAuth  TestGitHubResponseParser  TestJsonError  TestNotificationWidget  TestNotifications  TestVerifyToken  com.arran4.kgithub_notify.yml  kgithub-notify  kgithub-notify.desktop  plan.md  plan10.md  plan11.md  plan6.md  plan7.md  plan8.md  plan9.md  requirements.txt  run.sh  run_build.sh  server.py  test_compile.cpp  test_filter  test_filter.cpp  test_mlock  test_mlock.cpp  verify_server.py
.github/workflows/: build.yml  build.yml.disabled  ci.yml
.jules/: Dockerfile  Dockerfile.test  generate_screenshots.sh  run_tests.sh
.jules/mock/: MockGitHubClient.cpp  MockGitHubClient.h  MockNetworkAccessManager.cpp  MockNetworkAccessManager.h  ScreenshotGenerator.cpp
TestAuth_autogen/: deps  mocs_compilation.cpp
TestAuth_autogen/UVLADIE3JM/: moc_GitHubClient.cpp.d  moc_SettingsDialog.cpp.d
TestAuth_autogen/include/: TestAuth.moc.d
TestGitHubResponseParser_autogen/: deps
TestGitHubResponseParser_autogen/UVLADIE3JM/: moc_GitHubClient.cpp.d
TestGitHubResponseParser_autogen/include/: TestGitHubResponseParser.moc.d
TestJsonError_autogen/: deps  mocs_compilation.cpp
TestJsonError_autogen/UVLADIE3JM/: moc_GitHubClient.cpp.d
TestJsonError_autogen/include/: TestJsonError.moc.d
TestNotificationWidget_autogen/: deps  mocs_compilation.cpp
TestNotificationWidget_autogen/UVLADIE3JM/: moc_GitHubClient.cpp.d  moc_NotificationItemWidget.cpp.d  moc_SettingsDialog.cpp.d
TestNotificationWidget_autogen/include/: TestNotificationWidget.moc.d
TestNotifications_autogen/: deps
TestNotifications_autogen/UVLADIE3JM/: moc_GitHubClient.cpp.d
TestNotifications_autogen/include/: TestNotifications.moc.d
TestVerifyToken_autogen/: deps  moc_predefs.h
TestVerifyToken_autogen/UVLADIE3JM/: moc_GitHubClient.cpp.d
TestVerifyToken_autogen/include/: TestVerifyToken.moc.d
kgithub-notify_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
kgithub-notify_autogen/UVLADIE3JM/: moc_AuthErrorNotification.cpp.d  moc_GitHubClient.cpp.d  moc_MainWindow.cpp.d  moc_NotificationItemWidget.cpp.d  moc_SettingsDialog.cpp.d
kgithub-notify_autogen/include/: WalletManager.moc.d
src/: ActionWindow.cpp  ActionWindow.h  AuthErrorNotification.cpp  AuthErrorNotification.h  DebugWindow.cpp  DebugWindow.h  GitHubClient.cpp  GitHubClient.h  GitHubResponseParser.cpp  GitHubResponseParser.h  MainWindow.cpp  MainWindow.h  NewIssueDialog.cpp  NewIssueDialog.h  Notification.cpp  Notification.h  NotificationItemWidget.cpp  NotificationItemWidget.h  NotificationListWidget.cpp  NotificationListWidget.h  NotificationPopup.cpp  NotificationPopup.h  NotificationRuleEngine.cpp  NotificationRuleEngine.h  NotificationTextFormatter.cpp  NotificationTextFormatter.h  NotificationWindow.cpp  NotificationWindow.h  PopupNotification.cpp  PopupNotification.h  PullRequestWindow.cpp  PullRequestWindow.cpp.orig  PullRequestWindow.h  RepoListWindow.cpp  RepoListWindow.h  RulesDialog.cpp  RulesDialog.h  SecureString.h  SettingsDialog.cpp  SettingsDialog.h  (+13 more)
src/trending/: TrendingWindow.cpp  TrendingWindow.h
src/utils/: FilterParser.cpp  FilterParser.h
tests/: BenchmarkListUpdate.cpp  CMakeLists.txt  MockNetworkReply.cpp  MockNetworkReply.h  TestAuth.cpp  TestFilterParser.cpp  TestGitHubClient.cpp  TestGitHubResponseParser.cpp  TestJsonError.cpp  TestMain.cpp  TestMainWindow.cpp  TestNotificationTextFormatter.cpp  TestNotificationWidget.cpp  TestNotifications.cpp  TestSettings.cpp  TestVerifyToken.cpp  test_github_client.py
